--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/h0ward/download-google-spreadsheet/issues"
   },
-  "homepage": "https://github.com/h0ward/download-google-spreadsheet#readme"
+  "homepage": "https://github.com/h0ward/download-google-spreadsheet#readme",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
+  }
 }
