--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "description": "Download your Google Spreadsheets with Node.js.",
   "main": "index.js",
+  "bin": {
+    "download-google-spreadsheet": "./bin/download-google-spreadsheet.js"
+  },
   "scripts": {
+    "dev": "nodemon --watch src --exec 'gulp'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +35,7 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "nodemon": "^1.9.1"
   }
 }
