--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "gulp-babel": "^6.1.2",
     "gulp-sync": "^0.1.4",
     "nodemon": "^1.9.1"
+  },
+  "dependencies": {
+    "dotenv": "^2.0.0"
   }
 }
