--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "nodemon": "^1.9.1"
   },
   "dependencies": {
-    "dotenv": "^2.0.0"
+    "async": "^1.5.2",
+    "dotenv": "^2.0.0",
+    "googleapis": "^4.0.0",
+    "open": "0.0.5",
+    "request": "^2.69.0"
   }
 }
