--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DGSS_CLIENT_ID=
-DGSS_CLIENT_SECRET=
-DGSS_REDIRECT_URL=
+DGSS_CLIENT_ID=686354652584-fule4tvfhelci96apnb368bsu3d1st9c.apps.googleusercontent.com
+DGSS_CLIENT_SECRET=OeBRLzWNkwMOdjDe5HyHqIiZ
+DGSS_REDIRECT_URL=http://localhost:3477/
